app-part3/webserver-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-part3-service
  labels:
    application: hello-part3
spec:
  # comment or delete the following line if you want to use a LoadBalancer
  type: NodePort
  # if your cluster supports it, uncomment the following to automatically create
  # an external load-balanced IP for the frontend service.
  # type: LoadBalancer
  ports:
  - port: 80
  selector:
    application: hello-part3
