app-part3/webserver-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hello-part3-ingress
  annotations:
    kubernetes.io/ingress.class: ambassador
spec:
  rules:
  - http:
      paths:
      - path: /part3
        backend:
          serviceName: hello-part3-service
          servicePort: 80
